# PartyFish

./: .gitignore  LICENSE  NOTICE  PartyFish.spec  README.md  build.py  main.py  pyproject.toml  requirements.txt  test_gamepad.py  使用说明与版本更新.txt
.github/workflows/: ci.yml
data/: protected_fish.json
resources/: fish.json  protected_fish.json
src/: _version.py  config.py  debug_overlay.py  gamepad_controller.py  inputs.py  map_matcher.py  pokedex.py  pokedex_checker.py  pokedex_image_generator.py  record_manager.py  uno.py  vision.py  workers.py
src/configs/: display_config.py  game_config.py  region_config.py
src/gui/: fish_detail_dialog.py  home_interface.py  main_window.py  navigation_interface.py  overlay_window.py  pokedex_interface.py  profit_interface.py  records_interface.py  sell_confirmation_dialog.py  settings_interface.py  shutdown.py  single_instance.py  welcome_dialog.py
src/managers/: audio_manager.py  bait_manager.py  cycle_reset_manager.py  sales_limit_manager.py  signal_manager.py
src/services/: account_service.py  chart_builder_service.py  config_manager.py  coordinate_service.py  data_loader_service.py  digit_recognition_service.py  fishing_service.py  hardware_info.py  ocr_service.py  profit_analysis_service.py  record_chart_service.py  record_data_service.py  record_manager.py  record_schema.py  record_service.py  record_stats_service.py  release_service.py  screenshot_service.py  smart_pointer_debug_service.py  state_machine.py  (+3 more)
tests/: test_config_access.py  test_config_manager.py  test_fishing_service_smart.py  test_record_schema.py
(+13 files in other folders)
